--- a/src/main/resources/generator/html/ueberblick.vm
+++ b/src/main/resources/generator/html/ueberblick.vm
@@ -36,6 +36,25 @@
     <h1>Überblick - ${projekt}</h1>
     <div class="ueberblick">
         <table border="0" cellpadding="0" cellspacing="0">
+            <caption><span>Konfigurationsverantwortliche</span></caption>
+            <tbody>
+            <tr>
+                <th>Konfigurationsverantwortlicher</th>
+                <th>Beschreibung</th>
+            </tr>
+                #set( $row = 1 )
+                #foreach( $konfigurationsverantwortlicher in $konfigurationsverantwortliche )
+                <tr>
+                    <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsverantwortlicher.getPid()}/konfigurationsverantwortlicher-ueberblick.html">${konfigurationsverantwortlicher.getNameOderPid()}</a></td>
+                    <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsverantwortlicher.getKurzinfo()}</td>
+                </tr>
+                    #set( $row = $row + 1 )
+                #end
+            </tbody>
+        </table>
+    </div>
+    <div class="ueberblick">
+        <table border="0" cellpadding="0" cellspacing="0">
             <caption><span>Konfigurationsbereiche</span></caption>
             <tbody>
             <tr>
@@ -45,8 +64,8 @@
             #set( $row = 1 )
             #foreach( $konfigurationsbereich in $konfigurationsbereiche )
             <tr>
-                <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-ueberblick.html">$konfigurationsbereich.getNameOderPid()</a></td>
-                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">$konfigurationsbereich.getKurzinfo()</td>
+                <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${konfigurationsbereich.getZustaendiger().getPid()}/${konfigurationsbereich.getPid()}/konfigurationsbereich-ueberblick.html">${konfigurationsbereich.getNameOderPid()}</a></td>
+                <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${konfigurationsbereich.getKurzinfo()}</td>
             </tr>
             #set( $row = $row + 1 )
             #end
