HTML-Generator: Konfigurationsverantwortlichen in Kopfzeile integriert

--- a/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
@@ -23,6 +23,7 @@
 <div class="header">
     <ul>
         <li><a href="ueberblick.html">Überblick</a></li>
+        <li><a href="${konfigurationsbereich.getZustaendiger().getPid()}/konfigurationsverantwortlicher-ueberblick.html">Konfigurationsverantwortlicher</a></li>
         <li class="active">Konfigurationsbereich</li>
         <li>Objekt</li>
     </ul>
