HTML-Generator: Übersicht der Verantwortlichkeiten in Überblick eingefügt

--- a/src/main/resources/generator/html/stylesheet.css
+++ b/src/main/resources/generator/html/stylesheet.css
@@ -130,6 +130,10 @@ a {
     text-decoration: none;
 }
 
+.ueberblick th:first-child {
+    width: 33%;
+}
+
 .colFirst a {
     font-weight: bold;
 }
