--- a/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
@@ -36,7 +36,7 @@
 </div>
 <div class="content">
     <p>${konfigurationsbereich.getZustaendiger().getNameOderPid()}</p>
-    <h2>Konfigurationsbereich ${konfigurationsbereich.getNameOderPid()} (${konfigurationsbereich.getPid()}))</h2>
+    <h1>Konfigurationsbereich ${konfigurationsbereich.getNameOderPid()} (${konfigurationsbereich.getPid()})</h1>
     <p>${konfigurationsbereich.getKurzinfo()}</p>
     <p>${konfigurationsbereich.getBeschreibung()}</p>
     #if( !$konfigurationsbereich.getTypen().isEmpty() )
