--- a/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
+++ b/src/main/resources/generator/html/konfigurationsbereich-ueberblick.vm
@@ -81,7 +81,27 @@
         </table>
     </div>
     #end
-    <p>TODO Attributgruppen</p>
+    #if( !$konfigurationsbereich.getAttributgruppen().isEmpty() )
+        <div class="ueberblick">
+            <table border="0" cellpadding="0" cellspacing="0">
+                <caption><span>Attributgruppen</span></caption>
+                <tbody>
+                <tr>
+                    <th>Attributgruppe</th>
+                    <th>Beschreibung</th>
+                </tr>
+                    #set( $row = 1 )
+                    #foreach( $attributgruppe in $konfigurationsbereich.getAttributgruppen() )
+                    <tr>
+                        <td class="colFirst #if ($row % 2 == 0) rowColor #else altColor #end"><a href="${attributgruppe.getBereich().getZustaendiger().getPid()}/${attributgruppe.getBereich().getPid()}/${attributgruppe.getPid()}.html">$attributgruppe.getNameOderPid()</a></td>
+                        <td class="#if ($row % 2 == 0) rowColor #else altColor #end block">${attributgruppe.getKurzinfo()}</td>
+                    </tr>
+                        #set( $row = $row + 1 )
+                    #end
+                </tbody>
+            </table>
+        </div>
+    #end
     <p>TODO Attributlisten</p>
     <p>TODO Attribute</p>
 </div>
