--- a/src/main/resources/generator/java/attributgruppe.vm
+++ b/src/main/resources/generator/java/attributgruppe.vm
@@ -16,7 +16,7 @@ public class ${Java.klasse($attributgruppe)} {
 
     @Override
     public String toString() {
-        return "${Java.klasse($attributgruppe)}{}");
+        return "${Java.klasse($attributgruppe)}{}";
     }
 
 }
